added animation to header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
             
             <!-- Mobile Hamburger Menu -->
-            <!-- Has Errors Due to Being a Fake Button -->
+            <!-- Has Errors Due to Being a Fake button -->
             <button class="nav-menu" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="mobile-menu">
               <div class="menu-icon" aria-hidden="true">
                 <span class="menu-line"></span>
