--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             
             <!-- Mobile Hamburger Menu -->
             <!-- Has Errors Due to Being a Fake button -->
-            <button class="nav-menu" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="mobile-menu">
-              <div class="menu-icon" aria-hidden="true">
+            <button class="nav-menu" aria-label="Toggle navigation menu" aria-expanded="false" >
+              <div class="menu-icon">
                 <span class="menu-line"></span>
                 <span class="menu-line"></span>
                 <span class="menu-line"></span>
